--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -156,13 +156,36 @@ main {
   justify-content: center;
 }
 
+.container .profile-data .repositories ul li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container .profile-data .repositories ul li a{
   padding: 20px;
   border: 1px solid grey;  
   margin: 20px;
-  display: block;
   border-radius: 7px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
   transition: 0.3s ease-in-out;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.container .profile-data .repositories ul li a .container-repo-square{
+  display: flex;
+  width: auto;
+  gap: 10px;
+}
+.container .profile-data .repositories ul li .repo-square{
+  padding: 5px 5px;
+  background-color: #6c5ccb;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 3px;
 }
 
 .container .profile-data .repositories ul li a:hover{
